<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="@dimen/dp412"
        android:layout_height="@dimen/dp268"
        android:src="@drawable/top_background1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription,MissingConstraints"
        tools:layout_editor_absoluteY="0dp" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="@dimen/dp157"
        android:layout_height="@dimen/dp109"
        android:layout_marginStart="48dp"
        android:layout_marginTop="60dp"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/dp40"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        tools:ignore="MissingConstraints,SpUsage" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/women1"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintHorizontal_bias="0.679"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription,MissingConstraints" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="@dimen/dp346"
        android:layout_height="@dimen/dp54"
        android:background="@drawable/btn2"
        android:hint="@string/enter_your_email"
        android:textAllCaps="false"
        android:textColor="@color/_717171"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="292dp" />

    <TextView
        android:layout_width="@dimen/dp105"
        android:layout_height="@dimen/corners"
        android:text="@string/your_email"
        android:textColor="@color/_5325"
        android:textSize="@dimen/textSize"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editText3"
        tools:ignore="MissingConstraints,SpUsage"
        tools:layout_editor_absoluteX="32dp" />

    <TextView
        android:layout_width="@dimen/dp140"
        android:layout_height="@dimen/corners"
        android:text="@string/your_password"
        android:textColor="@color/_5325"
        android:textSize="@dimen/textSize"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editText4"
        tools:ignore="MissingConstraints,SpUsage"
        tools:layout_editor_absoluteX="32dp" />

    <TextView
        android:layout_width="@dimen/dp170"
        android:layout_height="@dimen/corners"
        android:text="@string/repeat_password"
        android:textColor="@color/_5325"
        android:textSize="@dimen/textSize"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editText5"
        tools:ignore="MissingConstraints,SpUsage"
        tools:layout_editor_absoluteX="36dp" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="@dimen/dp346"
        android:layout_height="@dimen/dp54"
        android:background="@drawable/btn2"
        android:hint="@string/enter_your_password"
        android:textAllCaps="false"
        android:textColor="@color/_717171"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="393dp" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="@dimen/dp346"
        android:layout_height="@dimen/dp54"
        android:background="@drawable/btn2"
        android:hint="@string/enter_your_password_again"
        android:textAllCaps="false"
        android:textColor="@color/_717171"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="502dp" />

    <androidx.appcompat.widget.AppCompatButton

        android:id="@+id/appCompatButton2"
        android:layout_width="@dimen/dp350"
        android:layout_height="@dimen/dp60"
        android:layout_marginStart="@dimen/dp16"

        android:layout_marginEnd="@dimen/dp16"
        android:layout_marginBottom="224dp"
        android:background="@drawable/btn3"
        android:drawableEnd="@drawable/circle"
        android:foregroundGravity="center_horizontal"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/tsize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.689"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpUsage" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="@string/already_have_an_account"
        android:textColor="@color/_5325a"
        android:textSize="@dimen/textSize"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatButton2"
        tools:ignore="MissingConstraints,SpUsage" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login"
        android:layout_width="@dimen/dp350"
        android:layout_height="@dimen/dp60"
        android:layout_marginStart="@dimen/dp16"
        android:layout_marginEnd="@dimen/dp16"
        android:layout_marginBottom="68dp"
        android:background="@drawable/btn1"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/_0968"
        android:textSize="@dimen/tsize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.689"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpUsage" />

</androidx.constraintlayout.widget.ConstraintLayout>