<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c3c3"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/dp425"
        android:layout_height="@dimen/dp628"
        android:layout_marginTop="@dimen/dp0"
        android:src="@drawable/background_intro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="@dimen/dp338"
        android:layout_height="@dimen/dp145"
        android:layout_marginTop="@dimen/dp32"
        android:gravity="center"
        android:text="@string/welcome_back_to_your_app"
        android:textColor="@color/white"
        android:textSize="@dimen/size45"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.589"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,SpUsage" />

    <TextView
        android:layout_width="@dimen/dp338"
        android:layout_height="@dimen/dp135"
        android:gravity="center"
        android:text="@string/download_all_the_designs_resource_available_on_the_uilover_channel_for_free"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints,SpUsage" />

    <ImageView
        android:layout_width="@dimen/dp416"
        android:layout_height="@dimen/dp775"
        android:layout_marginTop="@dimen/dp92"
        android:src="@drawable/women"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription,MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login"
        android:layout_width="@dimen/dp350"
        android:layout_height="@dimen/dp60"
        android:layout_marginStart="@dimen/dp16"
        android:layout_marginEnd="@dimen/dp16"
        android:layout_marginBottom="152dp"
        android:background="@drawable/btn1"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="#267729"
        android:textSize="@dimen/tsize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpUsage" />

    <ImageView
        android:layout_width="@dimen/dp412"
        android:layout_height="@dimen/dp836"
        android:background="@drawable/white_line"
        tools:ignore="ContentDescription,MissingConstraints"
        tools:layout_editor_absoluteX="-1dp"
        tools:layout_editor_absoluteY="0dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signup"
        android:layout_width="@dimen/dp350"
        android:layout_height="@dimen/dp60"
        android:layout_marginBottom="@dimen/dp52"
        android:background="@drawable/btn1"
        android:text="@string/signup"
        android:textAllCaps="false"
        android:textColor="#2D8031"
        android:textSize="@dimen/tsize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints,SpUsage" />

</androidx.constraintlayout.widget.ConstraintLayout>